<resources>
    <string name="app_name">FootLite</string>
    <string name="token">e0d9f47d73ae4a4a87eeb24935d8b2f8</string>

    <string name="tvBundesligaTitle">Bundesliga</string>
    <string name="tvPremierLeagueTitle">Premier League</string>
    <string name="tvLiguaNOSTitle">Liga NOS</string>
    <string name="tvLigue1Title">Ligue 1</string>
    <string name="tvSerieATitle">Serie A</string>
    <string name="tvPrimeraDivisionTitle">Liga Santander</string>
    <string name="tvSerieABrazilTitle">Brasileirão Assaí</string>
    <string name="tvNetherlandsTitle">Eredivisie</string>
    <string name="ibDescrSerieABrazil">Logo du championnat brésilien</string>
    <string name="ibDescrNetherlands">Logo du championnat néerlandais</string>
    <string name="ibDescrSerieA">Logo championnat Serie A</string>
    <string name="ibDescrPrimeraDivision">Logo championnat Primera Division</string>
    <string name="ibDescrLigue1">Logo championnat Ligue 1</string>
    <string name="ibDescrLiguaNOS">Logo championnat Ligue NOS</string>
    <string name="ibDescrBundesliga">Logo championnat Bundesliga</string>
    <string name="ibDescrPremierLeague">Logo championnat Premier League</string>
    <string name="tvDiffTitle">Diff.</string>
    <string name="tvPointsTitle">Points</string>
    <string name="tvMatchTitle">J</string>
    <string name="tvDomicileTitle">Domicile</string>
    <string name="tvScoreTitle">Score</string>
    <string name="tvVisiteurTitle">Visiteur</string>
    <string name="tvNomTitle">Nom</string>
    <string name="tvPaysTitle">Pays</string>
    <string name="tvPosteTitle">Poste</string>
    <string name="tvNumeroTitle">N°</string>
    <string name="ivLogoSplashScreen">Logo application SplashScreen</string>
    <string name="tvStadeTitle">Stade</string>
    <string name="btMatchesTitle">Matches</string>
    <string name="btnSquadTitle">Equipe</string>
    <string name="ivLogoClub">LogoClub</string>
    <string name="tvEntraineursTitle">Entraîneur</string>
    <string name="tvNomPlayerTitle">Nom</string>
    <string name="tvBirthdayTitle">Date de naissance</string>
    <string name="tvNationalityTitle">Pays d\'origine</string>
    <string name="tvPostePlayerTitle">Poste</string>
    <string name="tvClubNamePlayerTitle">Equipe</string>
    <string name="tvDeveloppeurTitle">Développeur</string>
    <string name="DevelopperName">Stephen Sakovitch</string>
    <string name="tvPromotionTitle">Promotion</string>
    <string name="Promotion">ESIEA 4A 2019–2020</string>
    <string name="tvEmailTitle">Email</string>
    <string name="EmailDevelopper">steph.sako@gmail.com</string>
    <string name="tvGitTitle">Git</string>
    <string name="LienGitProjet">/StephSako/FootLite</string>
    <string name="DescriptionAPropos">L\'application FootLite permet de récupérer des données au format JSON envoyées via des\nrequêtes HTTP depuis une API REST concernant des compétitions, équipes, matches et joueurs de football des huit principaux championnats :\n\n- la Bundesliga (Allemagne)\n- la Ligue 1 (France)\n- la Primera Division (Espagne)\n- la Premier League (Angleterre)\n- la Serie A (Brésil et Italie)\n- l\'Eredivisie (Pays-Bas)\n- la Primereira Liga (ou \"Liga NOS\", Portugal).\n\nVous pouvez également vous connecter et vous inscrire à un compte afin de suivre et de parier sur les matches de votre équipe favorite !</string>
    <string name="descrTvLogoClubClassement">Logo club classement</string>
    <string name="btnTeamSearchTitle">Team</string>
    <string name="tvSearch">Rechercher</string>
    <string name="btnCompetSearchTitle">Champ</string>
    <string name="txtCreditTitle">Qu\'est ce que FootLite ?</string>
    <string name="txtTitleApiUsed">API utilisée</string>
    <string name="txtApiLink">football-data.org</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="imgVDescFT">Navigation drawer</string>
    <string name="tvDeconnexion">Deconnexion</string>
    <string name="tvPreferences">Préférences</string>
    <string name="tvAPropos">A propos</string>
    <string name="tvGroupSettings">Paramètres</string>
    <string name="tvGroupChampionnats">Championnats</string>
    <string name="tvMainActivityMenu">Menu principal</string>
    <string name="logoclubhome">LogoClubHome</string>
    <string name="tvTiret">-</string>
    <string name="logoclubaway">LogoClubAway</string>
    <string name="date">Date</string>
    <string name="matches_totaux">Matches totaux</string>
    <string name="buts_totaux">Buts totaux</string>
    <string name="victoires">Victoires</string>
    <string name="d_faites">Défaites</string>
    <string name="nuls">Nuls</string>
    <string name="fin">FIN</string>
    <string name="mt">MT</string>
    <string name="espaceTiret">-</string>
    <string name="tvEditAccount">Modifier le compte</string>
    <string name="etPseudo">Pseudo</string>
    <string name="etPassword">Mot de passe</string>
    <string name="tvFavoriteTeam">Equipe supportée</string>
    <string name="se_connecter">Se connecter</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="editpseudobutton">editPseudoButton</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="mot_de_passe_actuel">Mot de passe actuel</string>
    <string name="ressaisissez">Ressaisissez</string>
    <string name="modifier_le_mot_de_passe">Modifier le mot de passe</string>
    <string name="classement">Classement</string>
    <string name="matches">Matches</string>
    <string name="serveur_comptes">Serveur comptes</string>
    <string name="alwaysdata_com_fr">alwaysdata.com/fr/</string>
</resources>