<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item android:title="Championnats">
        <menu>
            <item
                android:id="@+id/itemBundesliga"
                android:title="@string/tvBundesligaTitle" />
            <item
                android:id="@+id/itemPremierLeague"
                android:title="@string/tvPremierLeagueTitle" />
            <item
                android:id="@+id/itemLigue1"
                android:title="@string/tvLigue1Title" />
            <item
                android:id="@+id/itemLigaEspagne"
                android:title="@string/tvPrimeraDivisionTitle" />
            <item
                android:id="@+id/itemSerieA"
                android:title="@string/tvSerieATitle" />
            <item
                android:id="@+id/itemLigaNOS"
                android:title="@string/tvLiguaNOSTitle" />
            <item
                android:id="@+id/itemLigaBresil"
                android:title="@string/tvSerieABrazilTitle" />
            <item
                android:id="@+id/itemEredivisie"
                android:title="@string/tvNetherlandsTitle" />
        </menu>
    </item>

    <item android:title="Paramètres">
        <menu>
            <item
                android:id="@+id/logout"
                android:title="A propos"
                android:icon="@drawable/ic_logout"/>
            <item
                android:id="@+id/pref"
                android:title="Préférences"
                android:icon="@drawable/ic_preferences"/>
            <item
                android:id="@+id/credits"
                android:title="A propos"
                android:icon="@drawable/ic_about"/>
        </menu>
    </item>

</menu>
