<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/team_activity"
    android:orientation="vertical"
    tools:context="com.example.footballapi.view.activities."
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tvCredits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvDeveloppeurTitle"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/green"
            android:textStyle="bold" />
        <TextView
            android:text="@string/DevelopperName"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvPromotionTitle"
            android:textColor="@color/green"
            android:textStyle="bold" />
        <TextView
            android:text="@string/Promotion"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tvEmailTitle"
            android:textColor="@color/green"
            android:textStyle="bold" />
        <TextView
            android:text="@string/EmailDevelopper"
            android:autoLink="email"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvGitTitle"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/green"
            android:textStyle="bold"/>
        <TextView
            android:autoLink="web"
            android:text="@string/LienGitProjet"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>