<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.footballapi.view.fragments.MatchesFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvMatchTitle"
            android:layout_marginEnd="5dp"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvDomicileTitle"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="4dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvScoreTitle"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_weight="2"
            android:gravity="center" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/tvVisiteurTitle"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_weight="2"
            android:gravity="center" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMatches"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>