<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_activity"
    android:orientation="vertical"
    tools:context="com.example.footballapi.view.fragments.PlayerFragment"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="1dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivLogoClubPlayer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:contentDescription="@string/ivLogoClub" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvClubNamePlayerTitle"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/tvClubname"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvNomPlayerTitle"
            android:gravity="center"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/tvPlayerName"
            android:autoLink="web"
            android:textColor="@color/black"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="1dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvBirthdayTitle"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/tvBirthday"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvNationalityTitle"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/green"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/tvNationality"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tvPostePlayerTitle"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />
        <TextView
            android:id="@+id/tvPostePlayer"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>